--- a/statistics.html
+++ b/statistics.html
@@ -85,7 +85,7 @@
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Biogen/743999698571404-principal-analyst-statistical-programming-r-d-'>Biogen Principal Analyst, Statistical Programming (R&D) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -131,7 +131,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<h5><a href='https://mhra.referrals.selectminds.com/jobs/nibsc-statistician-%C2%A339853-p-a-benefits-1099'>NIBSC Statistician - ?39,853 p.a. + benefits - Medicines and Healthcare products Regulatory Agency Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://mhra.referrals.selectminds.com/jobs/nibsc-statistician-%C2%A339853-p-a-benefits-1099'>NIBSC Statistician - ?39,853 p.a. + benefits - Medicines and Healthcare products Regulatory Agency Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -151,7 +151,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on: 2019-10-25</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
+<h5><a href='https://jobs.bridgew.edu/postings/18039'>Bridgewater State University Portal | Assistant Professor- Statistics, Department of Mathematics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-24</p>
 <hr/>
@@ -163,7 +163,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
-<h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statmodeling.stat.columbia.edu/2019/10/23/were-hiring-an-econ-postdoc/'>We?re hiring an econ postdoc! ?  Statistical Modeling, Causal Inference, and Social Science</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-23</p>
 <hr/>
@@ -199,7 +199,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">France</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
+<h5><a href='https://jobs.sgul.ac.uk/Vacancy.aspx?ref=352-19'>
 	352-19 Research Lecturer (2 posts), Lecturer in Medical Statistics (1 post), Lecturer in Infection &amp; Immunity (1 post) - Jobs at St. George's
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -245,7 +245,7 @@ Remote Principal/Sr. Principal Biostatistician in Durham, from NeedLS, by Lori S
 <p><span class="badge badge-light">Springfield, Virginia</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
+<h5><a href='https://nshe.wd1.myworkdayjobs.com/en-US/UNR-external/job/University-of-Nevada-Reno---Main-Campus/Assistant-Associate-Professor-Professor-Statistics_R0118623'>Assistant/Associate Professor Statistics</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 8, 2019 ... Applicants must have a PhD degree in mathematics, statistics, bio-statistics, data 
 science, or a related area by the time of appointment. Successful candidates?...</p>
@@ -327,7 +327,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Shanghai, China</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/flagshippioneeringinc/jobs/4387857002'>Job Application for Scientist, Statistical Genetics at Flagship Pioneering, Inc.</a></h5> 
 <p><span class="badge badge-light">Cambridge, MA</span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
@@ -347,7 +347,7 @@ listings, and figures for clinical trials. Support Data Management in data set?.
 <p><span class="badge badge-light">Boston, Massachusetts</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/cormac-corporation/job/o4qkbfwJ'>CORMAC Careers - Jr. Data Scientist/Statistician</a></h5> 
+<h5><a href='https://jobs.jobvite.com/cormac-corporation/job/o4qkbfwJ'>CORMAC Careers - Jr. Data Scientist/Statistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -441,7 +441,7 @@ files, writing application programs within a statistical software, analyzing dat
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-08</p>
 <hr/>
-<h5><a href='https://cornell.wd1.myworkdayjobs.com/en-US/CornellCareerPage/job/Ithaca-Main-Campus/Statistician-II_WDR-00020841-1'>Statistician II</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://cornell.wd1.myworkdayjobs.com/en-US/CornellCareerPage/job/Ithaca-Main-Campus/Statistician-II_WDR-00020841-1'>Statistician II</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Access to restricted data that require security clearance may be necessary in 
 some instances. Statistical expertise in data management, analysis of panel data,
@@ -455,11 +455,11 @@ some instances. Statistical expertise in data management, analysis of panel data
 <p><span class="badge badge-light">Telangana, India</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
+<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/8E0BBDA5BE'>Statistics & Data Corporation (SDC) - Jobs: Senior Clinical Programmer - Apply online</a></h5> 
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on: 2019-10-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://employeebenefitsjobs.com/job/H151551?utm_source=dlvr.it&utm_medium=twitter'>
+<h5><a href='https://employeebenefitsjobs.com/job/H151551?utm_source=dlvr.it&utm_medium=twitter'>
 Statistician (Health) for Centers for Medicare &amp; Medicaid Services [CMS] in Bethesda MD / Telecommute
 </a></h5> 
 <p><span class="badge badge-light"></span></p>
